# multi-objective-preference-diffusion-for-controlled-text-to-image

./: FINAL_QA_REPORT.md  IMPROVEMENTS_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  pyproject.toml  requirements.txt  validate_project.py  verify_fix.py
configs/: ablation.yaml  default.yaml
results/: results.json  training_history.json
scripts/: evaluate.py  predict.py  train.py
src/multi_objective_preference_diffusion_for_controlled_text_to_image/: __init__.py
src/multi_objective_preference_diffusion_for_controlled_text_to_image/evaluation/: __init__.py  analysis.py  metrics.py
src/multi_objective_preference_diffusion_for_controlled_text_to_image/training/: __init__.py  trainer.py
src/multi_objective_preference_diffusion_for_controlled_text_to_image/utils/: __init__.py  config.py
tests/: __init__.py  test_data.py  test_model.py  test_training.py
